add style for index admin

--- a/resources/sass/home_admin.scss
+++ b/resources/sass/home_admin.scss
@@ -3,7 +3,41 @@
     height: 250px;
     border-radius: 13px;
     border: 1px solid #0A4067;
-    
+
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.eb_square_sponsor_base{
+    width: 250px;
+    height: 250px;
+    border-radius: 13px;
+    border: 3px solid #3490dc;
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+.eb_square_sponsor_medium{
+    width: 250px;
+    height: 250px;
+    border-radius: 13px;
+    border: 3px solid #38c172;
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+.eb_square_sponsor_pro{
+    width: 250px;
+    height: 250px;
+    border-radius: 13px;
+    border: 3px solid #efb810;
     img{
         width: 100%;
         height: 100%;
@@ -12,8 +46,8 @@
 }
 
 .eb_btn{
-    background-color: #0A4067;
-    color: whitesmoke;
+    background-color: #fff;
+    color: #0A4067;
     &:hover{
         opacity: 0.9;
         color: white;
@@ -22,12 +56,13 @@
 
 .my-radius-bg {
     border-radius: 15px;
-    border: 1px solid #0A4067;
-    background-color: #C6EAEC;
+    border: 1px solid #fff;
+    background-color: #0A4067;
+    color: #fff;
 }
 
 .lightBg {
-    background-color: #C6EAEC;
+    background-color: #0A4067;
 }
 
 .confirmSponsorship {
